fix: img in figure where overflowing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -514,10 +514,6 @@ figure[role="group"] {
     font-size: em( 14 );
     padding: 1em 0;
   }
-
-  img[alt] {
-    max-width: none;
-  }
 }
 
 
